--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "name": "nineteenYap",
-  "short_name": "19yap",
-  "start_url": "/index.html",
+  "short_name": "nineteenYap",
+  "start_url": "index.html",
   "display": "fullscreen",
   "background_color": "#ffffff",
   "theme_color": "#C2D8B9",
   "icons": [
     {
-      "src": "/fyav.jpg",
+      "src": "fyav.png",
       "sizes": "192x192",
-      "type": "image/jpg"
+      "type": "image/png"
     }
   ]
 }
